# deep-shot

./: .env.example  .gitignore  docker-compose.local.yml  docker-compose.portainer.yml  docker-compose.yml  main.py  nfl_codegen_poc.py  nflreadpy_schema_columns_only.md  pyproject.toml  streamlit_app.py
.claude/: settings.local.json
app/: main.py
app/api/routes/: nfl.py
app/config/: prompts.py  settings.py
app/models/: __init__.py  schemas.py
app/services/: code_executor.py  nfl_service.py
backend/: .env.example  Dockerfile  generate_docs.py  pyproject.toml  slim_docs.py  streamlit_app.py  test.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: nfl.py
backend/app/config/: settings.py  tools.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: nfl_service.py
backend/prompts/: retry_prompt.md  summarization_prompt.md  system_prompt.md
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_code_executor.py  test_nfl_service.py
deep-shot-frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
deep-shot-frontend/app/: assistant.tsx  layout.tsx
deep-shot-frontend/components/: settings-dialog.tsx
deep-shot-frontend/lib/: settings-context.tsx
frontend/: .env.example  Dockerfile
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.css  (+8 more)
prompts/: retry_prompt.md  summarization_prompt.md  system_prompt.md
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_code_executor.py  test_nfl_service.py
(+7 files in other folders)
