[project]
name = "deep-shot"
version = "0.1.0"
description = "NFL stats API powered by AI-generated code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.121.3",
    "html5lib>=1.1",
    "lxml>=6.0.2",
    "nflreadpy>=0.1.5",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.0.0",
    "requests>=2.32.5",
    "ruff>=0.14.6",
    "streamlit>=1.51.0",
    "tabulate>=0.9.0",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=4.0.0",
]
